--- a/index.html
+++ b/index.html
@@ -87,18 +87,22 @@
 							<div class="ts__item">
 								<h3 class="ts__item__title">Открывайте дверь гостям с вашего смартфона</h3>
 								<div class="ts__item__text">в подъезд или калитку во двор</div>
+								<img src="img/ts__person__1.svg" alt="" class="person ts__1">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Контролируйте двор и подъезд</h3>
 								<div class="ts__item__text">с видеонаблюдением в мобильном приложении</div>
+								<img src="img/ts__person__2.svg" alt="" class="person ts__2">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Всегда будьте в курсе, кто приходил</h3>
 								<div class="ts__item__text">к вашим детям и пожилым родственникам</div>
+								<img src="img/ts__person__3.svg" alt="" class="person ts__3">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Обсуждайте с соседями важные вопросы</h3>
 								<div class="ts__item__text">в чате приложения РосДомофон</div>
+								<img src="img/ts__person__4.svg" alt="" class="person ts__4">
 							</div>
 						</div>
 					</div>
@@ -124,9 +128,6 @@
 				<div class="ts__right">
 					<div class="ts__right__phone">
 						<img src="img/ts__phone.png" alt="">
-					</div>
-					<div class="ts__right__person">
-						<img src="img/ts__person.svg" alt="">
 					</div>
 				</div>
 			</div>
@@ -314,7 +315,7 @@
 			</div>
 			<div class="footer__bottom">
 				<div class="ft__left">
-					<div class="copyrights">© РосДомофон, 2023</div>
+					<div class="copyrights">© ООО «Дом-ИТ», 2023</div>
 					<a href="/" class="politics">Политика конфиденциальности</a>
 				</div>
 				<div class="ft__right">
