--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
 							<div class="ts__item">
 								<h3 class="ts__item__title">Открывайте дверь гостям с вашего смартфона</h3>
 								<div class="ts__item__text">в подъезд или калитку во двор</div>
-								<img src="img/ts__person__1.svg" alt="" class="person ts__1">
+								<img src="img/ts__person__1.png" alt="" class="person ts__1">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Контролируйте двор и подъезд</h3>
 								<div class="ts__item__text">с видеонаблюдением в мобильном приложении</div>
-								<img src="img/ts__person__2.svg" alt="" class="person ts__2">
+								<img src="img/ts__person__2.png" alt="" class="person ts__2">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Всегда будьте в курсе, кто приходил</h3>
 								<div class="ts__item__text">к вашим детям и пожилым родственникам</div>
-								<img src="img/ts__person__3.svg" alt="" class="person ts__3">
+								<img src="img/ts__person__3.png" alt="" class="person ts__3">
 							</div>
 							<div class="ts__item">
 								<h3 class="ts__item__title">Обсуждайте с соседями важные вопросы</h3>
 								<div class="ts__item__text">в чате приложения РосДомофон</div>
-								<img src="img/ts__person__4.svg" alt="" class="person ts__4">
+								<img src="img/ts__person__4.png" alt="" class="person ts__4">
 							</div>
 						</div>
 					</div>
@@ -125,11 +125,11 @@
 						<span class="tsd__text">и подключить вашу квартиру</span>
 					</a>
 				</div>
-				<div class="ts__right">
+				<!-- <div class="ts__right">
 					<div class="ts__right__phone">
 						<img src="img/ts__phone.png" alt="">
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 
@@ -274,19 +274,31 @@
 				<h2 class="section__title">Если остались вопросы</h2>
 				<div class="faq__list">
 					<div class="faq__item">
-						<div class="faq__header">Я оставил(а) заявку, а меня не подключают. Что делать?</div>
+						<div class="faq__header">
+							<div class="faqh__value">Я оставил(а) заявку, а меня не подключают. Что делать?</div>
+							<img src="img/plus.svg" alt="" class="plus__faq">
+						</div>
 						<div class="faq__body">Ответ</div>
 					</div>
 					<div class="faq__item">
-						<div class="faq__header">Могут ли все члены семьи пользоваться умным домофоном?</div>
+						<div class="faq__header">
+							<div class="faqh__value">Могут ли все члены семьи пользоваться умным домофоном?</div>
+							<img src="img/plus.svg" alt="" class="plus__faq">
+						</div>
 						<div class="faq__body">Ответ</div>
 					</div>
 					<div class="faq__item">
-						<div class="faq__header">У меня уже есть трубка от домофона. Как подключить ваш сервис?</div>
+						<div class="faq__header">
+							<div class="faqh__value">У меня уже есть трубка от домофона. Как подключить ваш сервис?</div>
+							<img src="img/plus.svg" alt="" class="plus__faq">
+						</div>
 						<div class="faq__body">Ответ</div>
 					</div>
 					<div class="faq__item">
-						<div class="faq__header">Можно ли пользоваться сервисом без наличия трубки домофона?</div>
+						<div class="faq__header">
+							<div class="faqh__value">Можно ли пользоваться сервисом без наличия трубки домофона?</div>
+							<img src="img/plus.svg" alt="" class="plus__faq">
+						</div>
 						<div class="faq__body">Ответ</div>
 					</div>
 				</div>
