--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 		<section class="app">
 			<div class="app__wrapper">
-				<h2 class="section__title">Что еще умеет РосДомофон?</h2>
+				<h2 class="section__title">Как подключиться к сервису РосДомофон</h2>
 				<div class="app__items">
 					<div class="app__item step__1">
 						Скачайте<br>
