--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
 		</div>
 	</div>
 
+	<div class="mobile__nav">
+		<div class="mobile__nav__wrapper">
+			<ul class="mn__ul">
+				<li class="mn__li"><a href="/" class="mn__link">Для жителей</a></li>
+				<li class="mn__li">
+					<a href="/" class="mn__link">Для бизнеса  <div class="nav__arrow"></div></a>
+					<div class="mn__submenu">
+						<ul class="mn__sub__menu">
+							<li><a href="/" class="mn__sub__link">Домофонным компаниям</a></li>
+							<li><a href="/" class="mn__sub__link">Телекоммуникационным компаниям</a></li>
+							<li><a href="/" class="mn__sub__link">Управляющим компаниям</a></li>
+						</ul>
+					</div>
+				</li>
+				<li class="mn__li"><a href="/" class="mn__link">О компании</a></li>
+			</ul>
+		</div>
+	</div>
+
 	<header class="header">
 		<div class="header__wrapper">
 			<a href="/" class="logo"></a>
@@ -83,6 +102,11 @@
 				</ul>
 			</nav>
 			<a href="/" class="small__download__btn modal__btn">Скачать приложение</a>
+			<div class="burger__control">
+				<div class="burger__line"></div>
+				<div class="burger__line"></div>
+				<div class="burger__line"></div>
+			</div>
 		</div>
 	</header>
 
