--- a/index.html
+++ b/index.html
@@ -292,9 +292,11 @@
 				<h2 class="section__title">Вот что говорят о нас пользователи</h2>
 				<div class="rating__text">Мобильное приложение РосДомофон охватывает более 1 млн квартир. Прочитайте, что пишут пользователи о мобильном приложении и комплексе умных сервисов РосДомофон.</div>
 				<div class="rating__items">
-					<img src="img/rating__1.svg" alt="">
-					<img src="img/rating__2.svg" alt="">
-					<img src="img/rating__3.svg" alt="">
+					<div class="rating__items__wrapper">
+						<div class="ri__wrapper"><img src="img/rating__1.svg" alt=""></div>
+						<div class="ri__wrapper"><img src="img/rating__2.svg" alt=""></div>
+						<div class="ri__wrapper"><img src="img/rating__3.svg" alt=""></div>
+					</div>
 				</div>
 				<div class="rating__text">Читайте больше реальных отзывов в разделе «Рейтинги и отзывы» в магазинах приложений App Store, Google Play, Huawei Gallery</div>
 				<a href="/" class="more">Больше отзывов здесь</a>
