--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<div class="benefits__sitem">
 						<div class="bsi__info">
 							<div class="bsi__title">Видеовызов с домофона приходит на смартфон</div>
-							<div class="bsi__text">Для гостей Вы всегда дома, потому что вызовы с домофона приходят прямо на Ваш смартфон.</div>
+							<div class="bsi__text">Для гостей вы всегда дома, потому что вызовы с домофона приходят прямо на Ваш смартфон.</div>
 						</div>
 						<div class="bsi__img">
 							<img src="img/benefits__2.jpg" alt="">
@@ -214,7 +214,7 @@
 							<div class="benefits__sitem bslider__item">
 								<div class="bsi__info">
 									<div class="bsi__title">Видеонаблюдение во дворе и подъезде</div>
-									<div class="bsi__text">В случае происшествия или порчи имущества, Вы всегда можете обратиться к архиву видеозаписей и узнать детали. </div>
+									<div class="bsi__text">В случае происшествия или порчи имущества, вы всегда можете обратиться к архиву видеозаписей и узнать детали. </div>
 								</div>
 								<div class="bsi__img">
 									<img src="img/benefits__5.jpg" alt="">
