--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 	<footer class="footer">
 		<div class="footer__wrapper">
-			<div class="footer__top">
+			<div class="footer__top main">
 				<a href="/" class="footer__logo"></a>
 				<nav class="footer__nav">
 					<ul>
