--- a/company.html
+++ b/company.html
@@ -101,7 +101,7 @@
 		</div>
 	</div>
 
-	<div class="mobile__nav">
+	<div class="mobile__nav black">
 		<div class="mobile__nav__wrapper">
 			<ul class="mn__ul">
 				<li class="mn__li"><a href="/" class="mn__link">Для жителей</a></li>
@@ -259,13 +259,13 @@
 				<div class="benefits__slider__different">
 					<div class="benefits__slider__wrapper">
 						<div class="bslider__items__different">
-							<div class="benefits__sitem bslider__item">
+							<div class="benefits__sitem bslider__item first__slide">
 								<div class="bsi__info">
 									<div class="bsi__title">Подключайте умную домофонию на действующем оборудовании</div>
 									<div class="bsi__text">Система РосДомофон автоматически блокирует за неуплату и активирует трубки и умные функции после оплаты, но вы можете управлять ими через личный кабинет . Управляйте трубками в одной квартире или во всем подъезде сразу.</div>
 								</div>
 								<div class="bsi__img">
-									<img src="img/ex_3.png" alt="">
+									<img src="img/cart__3.png" alt="">
 								</div>
 							</div>
 							<div class="benefits__sitem bslider__item">
@@ -274,7 +274,7 @@
 									<div class="bsi__text">Подключайте нестандартные схемы подключения: комплексы с калитками, несколько входных групп, двойные и тройные дверные системы в подъезде и системы с консьержами. Функционал включает кнопку с вызовом ЕДДС.</div>
 								</div>
 								<div class="bsi__img">
-									<img src="img/ex_3.png" alt="">
+									<img src="img/cart__4.png" alt="">
 								</div>
 							</div>
 							<div class="benefits__sitem bslider__item">
@@ -282,8 +282,8 @@
 									<div class="bsi__title">Увеличьте доходность на действующих объектах</div>
 									<div class="bsi__text">Обеспечьте безопасность жильцов. Пользователи смогут быстро разобраться с инцидентом, просмотрев камеры видеонаблюдения, а Вы увеличите доходы удовлетворив потребность жильцов.</div>
 								</div>
-								<div class="bsi__img">
-									<img src="img/ex_3.png" alt="">
+								<div class="bsi__img cart__5">
+									<img src="img/cart__5.png" alt="">
 								</div>
 							</div>
 							<div class="benefits__sitem bslider__item">
@@ -292,7 +292,7 @@
 									<div class="bsi__text">Предоставьте сотрудникам управляющей компании доступ к записям с видеокамер во дворе и в подъездах без возможности настройки камер и домофонов. Также они получат возможность общаться с жильцами.</div>
 								</div>
 								<div class="bsi__img">
-									<img src="img/ex_3.png" alt="">
+									<img src="img/cart__6.png" alt="">
 								</div>
 							</div>
 							<div class="benefits__sitem bslider__item">
@@ -301,7 +301,7 @@
 									<div class="bsi__text">В личном кабинете отображается статус оборудования и системные сообщения. База знаний регулярно обновляется свежими данными. Это помогает разрешать инциденты и своевременно подключать техподдержку.</div>
 								</div>
 								<div class="bsi__img">
-									<img src="img/ex_3.png" alt="">
+									<img src="img/cart__7.png" alt="">
 								</div>
 							</div>
 						</div>
@@ -371,7 +371,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Как окупить запуск такой услуги на пятиэтажках</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">Есть два варианта действий: увеличить доходную часть услуги или сократить расходную. Чтобы увеличить доходы, мы предлагаем маркетинговый набор для привлечения новых клиентов внутри дома. Также мы рекомендуем подключать несколько услуг. Например, видеонаблюдение детской площадки или парковки в дополнение к умному домофону. Для сокращения расходной части мы разработали специальные коммерческие условия для партнеров с проектами массовых внедрений услуги на пятиэтажках. Более подробную информацию Вам предоставят сотрудники отдела продаж.
 						</div>
@@ -379,7 +379,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Каким образом подключается координатно-матричная панель к вашему программному обеспечению?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Для подключения координатно-матричных (аналоговых) или цифровых домофонов мы разработали специальный адаптер RDA (РосДомофонАдаптер) позволяющий перехватить аналоговый сигнал от вызывной панели, преобразовать его в цифровой и отправить в Интернет. Существуют различные модели RDA, позволяющие подключить к сервису как отдельно стоящий, так и многоподъездный дом.</p>
@@ -389,7 +389,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">У меня уже есть трубка от домофона. Как подключить ваш сервис?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Существует 3 типа подключений IP-панели к сервису РосДомофон:</p>
@@ -402,7 +402,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Можно ли настроить прием видео в приложение из камеры, встроенной в домофон?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Да, можно. Наша система умеет транслировать видеопотоки как с IP-камер с помощью RTSP протокола, так и с аналоговых камер, работающих через видеорегистратор с возможностью ретрансляции через RTSP протокол. Настройка и привязка видеопотока к конкретному адресу осуществляется в личном кабинете партнера.</p>
@@ -412,7 +412,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Что можно использовать, если вызывная панель домофона не оборудована камерой?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Необходимо разместить внешнюю камеру рядом с домофонной панелью так, чтобы она была направлена на лицо посетителя и избавлена от засветов, так чтобы пользователь всегда мог рассмотреть лицо посетителя в хорошем качестве</p>
@@ -422,7 +422,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Кто пользуется вашим приложением? (возраст, интересы)</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Наша внутренняя статистика показывает, что сервис РосДомофон востребован как среди молодых и технический продвинутых пользователей, так и у граждан других категорий. Основная аудитория  — это пользователи от 35 до  54 лет, в большинстве — женщины.</p>
@@ -438,7 +438,7 @@
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">Как жильцы будут платить за сервис?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
 						<div class="faq__body">
 							<p>Есть 3 варианта приёма платежей:</p>
