--- a/index.html
+++ b/index.html
@@ -309,31 +309,82 @@
 				<div class="faq__list">
 					<div class="faq__item">
 						<div class="faq__header">
-							<div class="faqh__value">Я оставил(а) заявку, а меня не подключают. Что делать?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="faqh__value">Как окупить запуск такой услуги на пятиэтажках</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
-						<div class="faq__body">Ответ</div>
+						<div class="faq__body">Есть два варианта действий: увеличить доходную часть услуги или сократить расходную. Чтобы увеличить доходы, мы предлагаем маркетинговый набор для привлечения новых клиентов внутри дома. Также мы рекомендуем подключать несколько услуг. Например, видеонаблюдение детской площадки или парковки в дополнение к умному домофону. Для сокращения расходной части мы разработали специальные коммерческие условия для партнеров с проектами массовых внедрений услуги на пятиэтажках. Более подробную информацию Вам предоставят сотрудники отдела продаж.
+						</div>
 					</div>
 					<div class="faq__item">
 						<div class="faq__header">
-							<div class="faqh__value">Могут ли все члены семьи пользоваться умным домофоном?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="faqh__value">Каким образом подключается координатно-матричная панель к вашему программному обеспечению?</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
-						<div class="faq__body">Ответ</div>
+						<div class="faq__body">
+							<p>Для подключения координатно-матричных (аналоговых) или цифровых домофонов мы разработали специальный адаптер RDA (РосДомофонАдаптер) позволяющий перехватить аналоговый сигнал от вызывной панели, преобразовать его в цифровой и отправить в Интернет. Существуют различные модели RDA, позволяющие подключить к сервису как отдельно стоящий, так и многоподъездный дом.</p>
+							<p>RDA ставится в разрыв между вызывной панелью и коммутатором, что позволяет отправлять вызов на и домофонную трубку, и в приложение на смартфоне пользователя. Также пользователь может открывать со смартфона все подключенные к RDA двери (шлагбаумы, ворота, калитки и т.д.).</p>
+						</div>
 					</div>
 					<div class="faq__item">
 						<div class="faq__header">
 							<div class="faqh__value">У меня уже есть трубка от домофона. Как подключить ваш сервис?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
-						<div class="faq__body">Ответ</div>
+						<div class="faq__body">
+							<p>Существует 3 типа подключений IP-панели к сервису РосДомофон:</p>
+							<p>1. Прямое подключение от IP-панели к нашему SIP-серверу, посредством публичного ip-адреса на панели. Далее производится настройка подключения в личном кабинете РосДомофона и затем полученные данные прописываются в настройках SIP на ip-панели.</p>
+							<p>2. Подключение посредством ATC на RDA. В этом случае не требуется наличие публичного ip-адреса. В роли промежуточного узла выступает RDA, который позволяет ретранслировать как SIP-звонки, так приватные видео-потоки. IP-панель и RDA должны находиться в общей локальной сети.</p> 
+							<p>3. SIP-транк подключение посредством выделенного сервера. Это решение по своей логике аналогично предыдущему пункту с RDA, только вместо RDA разворачивается полноценный сервер с АТС на стороне партнера.</p>
+
+						</div>
 					</div>
 					<div class="faq__item">
 						<div class="faq__header">
-							<div class="faqh__value">Можно ли пользоваться сервисом без наличия трубки домофона?</div>
-							<img src="img/plus.svg" alt="" class="plus__faq">
+							<div class="faqh__value">Можно ли настроить прием видео в приложение из камеры, встроенной в домофон?</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
 						</div>
-						<div class="faq__body">Ответ</div>
+						<div class="faq__body">
+							<p>Да, можно. Наша система умеет транслировать видеопотоки как с IP-камер с помощью RTSP протокола, так и с аналоговых камер, работающих через видеорегистратор с возможностью ретрансляции через RTSP протокол. Настройка и привязка видеопотока к конкретному адресу осуществляется в личном кабинете партнера.</p>
+							<p>В случае, если в одной локальной сети с камерой имеется RDA, то возможна ретрансляция в облако РосДомофона до 6ти видео-потоков по локальному (серому) ip-адресу.</p>
+						</div>
+					</div>
+					<div class="faq__item">
+						<div class="faq__header">
+							<div class="faqh__value">Что можно использовать, если вызывная панель домофона не оборудована камерой?</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
+						</div>
+						<div class="faq__body">
+							<p>Необходимо разместить внешнюю камеру рядом с домофонной панелью так, чтобы она была направлена на лицо посетителя и избавлена от засветов, так чтобы пользователь всегда мог рассмотреть лицо посетителя в хорошем качестве</p>
+							<p>К РосДомофон можно подключить как ip-камеры посредствам RTSP протокола, так и аналоговые камеры, работающие через видеорегистратор с возможностью передачи видео через RTSP протокол. Настройка и привязка видеопотока к конкретному подъезду и домофону осуществляется в личном кабинете на платформе РосДомофон.</p>
+						</div>
+					</div>
+					<div class="faq__item">
+						<div class="faq__header">
+							<div class="faqh__value">Кто пользуется вашим приложением? (возраст, интересы)</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
+						</div>
+						<div class="faq__body">
+							<p>Наша внутренняя статистика показывает, что сервис РосДомофон востребован как среди молодых и технический продвинутых пользователей, так и у граждан других категорий. Основная аудитория  — это пользователи от 35 до  54 лет, в большинстве — женщины.</p>
+							<p>Людям интересен сервис умной домофонии и видеонаблюдения, это подтверждает частота входов в мобильное приложение — 1,77 раза ежедневно 1  пользователь заходит в приложения РосДомофон для просмотра камер, приёма видеовызова с домофона или открытия дверей, калиток или шлагбаумов.</p>
+							<div class="faq__images">
+								<img src="img/faq_1.jpeg" alt="">
+								<img src="img/faq_2.jpeg" alt="">
+								<img src="img/faq_3.jpeg" alt="">
+								<img src="img/faq_4.jpeg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="faq__item">
+						<div class="faq__header">
+							<div class="faqh__value">Как жильцы будут платить за сервис?</div>
+							<div class="plus__faq"><img src="img/plus.svg" alt=""></div>
+						</div>
+						<div class="faq__body">
+							<p>Есть 3 варианта приёма платежей:</p>
+							<p>– Классический, тот что был у вас ранее: печатные квитанции от управляющей компании, в которые добавляется плата за работу системы. Также можно использовать свой биллинг, если таковой имеется.</p>
+							<p>– Сделать интеграцию сервиса РосДомофон с Вашей биллинговой системой</p>
+							<p>– Подключить встроенную систему приёма платежей на платформе РосДомофон и собирать с жильцов оплату через официальное мобильное приложение. Опыт наших партнеров показал, что такой вариант сбора платежей поднимает собираемость до 90-95% от общего кол-ва пользователей нового сервиса.</p>
+						</div>
 					</div>
 				</div>
 				<a href="/" class="more">Показать больше ответов</a>
