--- a/company.html
+++ b/company.html
@@ -109,7 +109,7 @@
 					<a href="/" class="mn__link">Для бизнеса  <div class="nav__arrow"></div></a>
 					<div class="mn__submenu">
 						<ul class="mn__sub__menu">
-							<li><a href="/" class="mn__sub__link">Домофонным компаниям</a></li>
+							<li><a href="/company.html" class="mn__sub__link">Домофонным компаниям</a></li>
 							<li><a href="/" class="mn__sub__link">Телекоммуникационным компаниям</a></li>
 							<li><a href="/" class="mn__sub__link">Управляющим компаниям</a></li>
 						</ul>
@@ -130,7 +130,7 @@
 						<a href="/" class="top__link">Для бизнеса  <div class="nav__arrow"></div></a>
 						<div class="submenu">
 							<ul class="sub__menu">
-								<li><a href="/" class="sub__link">Домофонным компаниям</a></li>
+								<li><a href="/company.html" class="sub__link">Домофонным компаниям</a></li>
 								<li><a href="/" class="sub__link">Телекоммуникационным компаниям</a></li>
 								<li><a href="/" class="sub__link">Управляющим компаниям</a></li>
 							</ul>
@@ -495,7 +495,7 @@
 								<a href="/" class="footer__link sub__main">Стать партнером</a>
 								<div class="footer__submenu">
 									<ul>
-										<li><a href="/" class="f__sublink">Домофонным компаниям</a></li>
+										<li><a href="/company.html" class="f__sublink">Домофонным компаниям</a></li>
 										<li><a href="/" class="f__sublink">Телекоммуникационным компаниям</a></li>
 										<li><a href="/" class="f__sublink">Управляющим компаниям</a></li>
 									</ul>
