--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 					<a href="/" class="mn__link">Для бизнеса  <div class="nav__arrow"></div></a>
 					<div class="mn__submenu">
 						<ul class="mn__sub__menu">
-							<li><a href="/company.html" class="mn__sub__link">Домофонным компаниям</a></li>
-							<li><a href="/" class="mn__sub__link">Телекоммуникационным компаниям</a></li>
-							<li><a href="/" class="mn__sub__link">Управляющим компаниям</a></li>
+							<li><a href="/home.html" class="mn__sub__link">Домофонным компаниям</a></li>
+							<li><a href="/telecom.html" class="mn__sub__link">Телекоммуникационным компаниям</a></li>
+							<li><a href="/control.html" class="mn__sub__link">Управляющим компаниям</a></li>
 						</ul>
 					</div>
 				</li>
@@ -92,9 +92,9 @@
 						<a href="/" class="top__link">Для бизнеса  <div class="nav__arrow"></div></a>
 						<div class="submenu">
 							<ul class="sub__menu">
-								<li><a href="/company.html" class="sub__link">Домофонным компаниям</a></li>
-								<li><a href="/" class="sub__link">Телекоммуникационным компаниям</a></li>
-								<li><a href="/" class="sub__link">Управляющим компаниям</a></li>
+								<li><a href="/home.html" class="sub__link">Домофонным компаниям</a></li>
+								<li><a href="/telecom.html" class="sub__link">Телекоммуникационным компаниям</a></li>
+								<li><a href="/control.html" class="sub__link">Управляющим компаниям</a></li>
 							</ul>
 						</div>
 					</li>
@@ -405,9 +405,9 @@
 							<a href="/" class="footer__link sub__main">Стать партнером</a>
 							<div class="footer__submenu">
 								<ul>
-									<li><a href="/company.html" class="f__sublink">Домофонным компаниям</a></li>
-									<li><a href="/" class="f__sublink">Телекоммуникационным компаниям</a></li>
-									<li><a href="/" class="f__sublink">Управляющим компаниям</a></li>
+									<li><a href="/home.html" class="f__sublink">Домофонным компаниям</a></li>
+									<li><a href="/telecom.html" class="f__sublink">Телекоммуникационным компаниям</a></li>
+									<li><a href="/control.html" class="f__sublink">Управляющим компаниям</a></li>
 								</ul>
 							</div>
 						</li>
@@ -445,7 +445,7 @@
 	<script src="libs/plugins-scroll/plugins-scroll.js"></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-	<!-- <script>
+	<script>
 		SmoothScroll({
 			animationTime    : 1000,
 			stepSize         : 50,
@@ -465,7 +465,7 @@
 	
 			touchpadSupport   : true,
 		})
-	</script>	 -->
+	</script>	
 	
 	<script src="js/common.js"></script>
 	
